salesforce_sfdx/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Customer Accounts</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Utilization Management</fullName>
            </value>
            <value>
                <fullName>Utilization review</fullName>
            </value>
            <value>
                <fullName>MURS</fullName>
            </value>
            <value>
                <fullName>MARS</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>System Support</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>SIU</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Case management</fullName>
            </value>
            <value>
                <fullName>CRM Operations &amp; Service</fullName>
            </value>
            <value>
                <fullName>Claim support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>