salesforce_sfdx/main/default/objects/User/fields/Primary_Teams__c.field-meta.xml
<CustomField>
    <fullName>Primary_Teams__c</fullName>
    <label>Primary Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXCA</fullName>
                <label>Exchange CCM Adjustments</label>
            </value>
            <value>
                <fullName>ECC</fullName>
                <label>Exchange Corrected Claims</label>
            </value>
            <value>
                <fullName>ECSA</fullName>
                <label>Exchange CSR Adjustments</label>
            </value>
            <value>
                <fullName>EENAI</fullName>
                <label>Exchange Escalated NDR Adjustment Issues</label>
            </value>
            <value>
                <fullName>EIE</fullName>
                <label>Exchange Instate Eligibility</label>
            </value>
            <value>
                <fullName>EIRR</fullName>
                <label>Exchange Instate Re-Review</label>
            </value>
            <value>
                <fullName>EORC</fullName>
                <label>Exchange Overpayments/Refunds - Claims</label>
            </value>
            <value>
                <fullName>ERC</fullName>
                <label>Exchange Refunds CSR</label>
            </value>
            <value>
                <fullName>ETF</fullName>
                <label>Exchange Timely Filing</label>
            </value>
            <value>
                <fullName>EWTC</fullName>
                <label>Exchange WalkThrough Claims</label>
            </value>
            <value>
                <fullName>HAECA</fullName>
                <label>Health Advantage Exchange CCM Adjustments</label>
            </value>
            <value>
                <fullName>HAECC</fullName>
                <label>Health Advantage Exchange- Corrected Claims</label>
            </value>
            <value>
                <fullName>HAEENAI</fullName>
                <label>Health Advantage Exchange Escalated NDR Adjustment Issues</label>
            </value>
            <value>
                <fullName>HAEIE</fullName>
                <label>Health Advantage Exchange Instate Eligibility</label>
            </value>
            <value>
                <fullName>HAEIRR</fullName>
                <label>Health Advantage Exchange Instate Re-Review</label>
            </value>
            <value>
                <fullName>HAEORC</fullName>
                <label>Health Advantage Exchange Overpayments/Refunds - Claims</label>
            </value>
            <value>
                <fullName>HAERC</fullName>
                <label>Health Advantage Exchange Refunds CSR</label>
            </value>
            <value>
                <fullName>HAEWC</fullName>
                <label>Health Advantage Exchange Walkthrough Claims</label>
            </value>
            <value>
                <fullName>HAEXCA</fullName>
                <label>Health Advatage Exchange CSR Adjustments</label>
            </value>
            <value>
                <fullName>EILA</fullName>
                <label>Exchange - ITS Legal Appeals</label>
            </value>
            <value>
                <fullName>ECIA</fullName>
                <label>Exchange CSR ITS Adjustments</label>
            </value>
            <value>
                <fullName>HAECCA</fullName>
                <label>Health Advantage Exchange COB Claims/Adjustments</label>
            </value>
            <value>
                <fullName>EIBIA</fullName>
                <label>Exchange ITS B2 Incoming Appeals</label>
            </value>
            <value>
                <fullName>ECOBCA</fullName>
                <label>Exchange COB Claims/Adjustments</label>
            </value>
            <value>
                <fullName>HAEICA</fullName>
                <label>Health Advantage Exchange ITS CSR Adjustments</label>
            </value>
            <value>
                <fullName>HAEILA</fullName>
                <label>Health Advantage Exchange- ITS Legal Appeals</label>
            </value>
            <value>
                <fullName>815E</fullName>
                <label>815 Exchange</label>
            </value>
            <value>
                <fullName>EMPU</fullName>
                <label>Exchange - Membership PCP Update</label>
            </value>
            <value>
                <fullName>EVM</fullName>
                <label>Exchange - Voice Mail</label>
            </value>
            <value>
                <fullName>EA</fullName>
                <label>Exchange Authorizations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>