salesforce_sfdx/main/default/objects/User/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANA</fullName>
            </value>
            <value>
                <fullName>BARB</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>FEP</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>BlueCard</fullName>
            </value>
            <value>
                <fullName>ASE/PSE</fullName>
            </value>
            <value>
                <fullName>USAble</fullName>
            </value>
            <value>
                <fullName>ABCBS Regular Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>