salesforce_sfdx/main/default/objects/User/fields/Secondary_Teams__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Teams__c</fullName>
    <label>Secondary Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAMR</fullName>
                <label>MARS ABCBS 165 Medrec Responses</label>
            </value>
            <value>
                <fullName>MAI</fullName>
                <label>MARS ABCBS 178/173 INFOMSG</label>
            </value>
            <value>
                <fullName>MIN</fullName>
                <label>MARS ITS Nurse</label>
            </value>
            <value>
                <fullName>MABCT</fullName>
                <label>MARS ABCBS Blue Card Team</label>
            </value>
            <value>
                <fullName>MBCH</fullName>
                <label>MARS BlueCard Host</label>
            </value>
            <value>
                <fullName>MADN</fullName>
                <label>MARS Authorization Do NOT route to this queue</label>
            </value>
            <value>
                <fullName>MBIAR</fullName>
                <label>MARS Benefit Inquiry Additional Records</label>
            </value>
            <value>
                <fullName>MBIL</fullName>
                <label>MARS BI Letters</label>
            </value>
            <value>
                <fullName>MBR</fullName>
                <label>MARS BI Remarks</label>
            </value>
            <value>
                <fullName>MPAR</fullName>
                <label>MARS PA Additional Records</label>
            </value>
            <value>
                <fullName>MPIRDN</fullName>
                <label>MARS PA Incoming Requests Do NOT route to this queue</label>
            </value>
            <value>
                <fullName>MPBI</fullName>
                <label>MARS - Pre-service Benefit Inquiry</label>
            </value>
            <value>
                <fullName>MPMD</fullName>
                <label>MARS PA Miscellaneous DO NOT ROUTE TO THIS QUEUE</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>MARS IMRT</label>
            </value>
            <value>
                <fullName>CMO</fullName>
                <label>CSPH MRR Outgoing</label>
            </value>
            <value>
                <fullName>CMR</fullName>
                <label>CSPH MRR Return</label>
            </value>
            <value>
                <fullName>WMUMR</fullName>
                <label>Wal-Mart Unsolicited Medical Records</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>CSPH Support</label>
            </value>
            <value>
                <fullName>FMPA</fullName>
                <label>FEP MARS (Prior - Auth)</label>
            </value>
            <value>
                <fullName>FMN</fullName>
                <label>FEP MARS Nurse</label>
            </value>
            <value>
                <fullName>FMR</fullName>
                <label>FEP MARS Re-Review</label>
            </value>
            <value>
                <fullName>FMRE</fullName>
                <label>FEP MARS Researcher</label>
            </value>
            <value>
                <fullName>FMRS</fullName>
                <label>FEP Medical Audit and Review Services</label>
            </value>
            <value>
                <fullName>FMRN</fullName>
                <label>FEP MRR-RN review</label>
            </value>
            <value>
                <fullName>MHN</fullName>
                <label>MARS HA Nurse</label>
            </value>
            <value>
                <fullName>MHSG</fullName>
                <label>MARS HA Secure Group</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>MRR - SIU</label>
            </value>
            <value>
                <fullName>ALAR</fullName>
                <label>ABCBS Legal Appeals/Rescissions</label>
            </value>
            <value>
                <fullName>AIBIA</fullName>
                <label>ABCBS ITS B2 Incoming Appeals</label>
            </value>
            <value>
                <fullName>AFRP</fullName>
                <label>ABCBS Facility Reimbursement Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>