salesforce_sfdx/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECA</fullName>
                <label>Exchange CCM Adjustments</label>
            </value>
            <value>
                <fullName>ECC</fullName>
                <label>Exchange Corrected Claims</label>
            </value>
            <value>
                <fullName>ECSA</fullName>
                <label>Exchange CSR Adjustments</label>
            </value>
            <value>
                <fullName>EENA</fullName>
                <label>Exchange Escalated NDR Adjustment Issues</label>
            </value>
            <value>
                <fullName>EIE</fullName>
                <label>Exchange Instate Eligibility</label>
            </value>
            <value>
                <fullName>EIRR</fullName>
                <label>Exchange Instate Re-Review</label>
            </value>
            <value>
                <fullName>EORC</fullName>
                <label>Exchange Overpayments/Refunds - Claims</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>