salesforce_sfdx/main/default/objects/User/fields/User_Departments__c.field-meta.xml
<CustomField>
    <fullName>User_Departments__c</fullName>
    <label>User Departments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>