salesforce_sfdx/main/default/objects/User/fields/User_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>User_Product_Line__c</fullName>
    <label>User Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>