salesforce_sfdx/main/default/objects/User/fields/User_Secondary_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Secondary_Team__c</fullName>
    <label>User Secondary Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>